--- a/app.json
+++ b/app.json
@@ -62,7 +62,8 @@
           "iCloudContainerEnvironment": "Production"
         }
       ],
-      "@react-native-community/datetimepicker"
+      "@react-native-community/datetimepicker",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
